<resources>
    <string name="activity_main">Map</string>
    <string name="activity_checkin">Checkin</string>
    <string name="activity_about">About</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_search">Search</string>
    <string name="activity_login">Login</string>
    <string name="activity_forgot_password">Reset password</string>
    <string name="activity_onboarding">Tutorial</string>
    <string name="activity_terms">Terms of use</string>
    <string name="activity_faq">FAQ</string>
    <string name="receiver_reminder">Prkng Memento</string>
    <string name="url_faq">http://prk.ng/faq/?embed=true</string>
    <string name="url_terms">http://prk.ng/terms/?embed=true</string>
    <string name="url_privacy">http://prk.ng/privacypolicy/?embed=true</string>
    <string name="asset_faq">file:///android_asset/en-faq.html</string>
    <string name="asset_terms">file:///android_asset/en-terms.html</string>
    <string name="mail_to_contact">mailto:hello@prk.ng?subject=About Prkng Android</string>
    <string name="share_app_subject">Discover Prkng on Google Play</string>
    <string name="share_app_body">@string/url_playstore</string>
    <string name="city_montreal">Montréal, QC</string>
    <string name="city_new_york">New York, NY</string>
    <string name="city_quebec">Québec, QC</string>
    <string name="city_seattle">Seattle, WA</string>
    <string name="prefs_login_title">Login</string>
    <string name="prefs_logout_title">Logout</string>
    <string name="prefs_city_title">City</string>
    <string name="prefs_city_dialog_title">Select city</string>
    <string name="prefs_notify_title">Ticket Alert</string>
    <string name="prefs_notify_summary">Get notified 30 min before time’s up</string>
    <string name="prefs_carshare_mode_title">CarSharing Mode</string>
    <string name="prefs_car2go_title">@string/carshare_company_car2go</string>
    <string name="prefs_automobile_title">@string/carshare_company_automobile</string>
    <string name="prefs_communauto_title">@string/carshare_company_communauto</string>
    <string name="prefs_zipcar_title">@string/carshare_company_zipcar</string>
    <string name="prefs_cat_general">General</string>
    <string name="prefs_cat_auth">Account</string>
    <string name="prefs_cat_carsharing">Map mode</string>
    <string name="prefs_cat_feedback">***Feedback</string>
    <string name="prefs_cat_help">***Help</string>
    <string name="prefs_cat_legal">***Legal</string>
    <string name="prefs_onboarding_title">Take a tour</string>
    <string name="prefs_support_title">Support</string>
    <string name="prefs_faq_title">Frequently asked questions</string>
    <string name="prefs_terms_title">Terms of Use</string>
    <string name="prefs_privacy_title">***Privacy policy</string>
    <string name="prefs_rate_app_title">***Review on Google Play</string>
    <string name="prefs_version_title">Version</string>
    <string name="action_search">Search</string>
    <string name="action_timer">Duration</string>
    <string name="action_user_account">User activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_carshare_mode">@string/prefs_carshare_mode_title</string>
    <string name="action_about">About</string>
    <string name="action_checkin">Checkin</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Create account</string>
    <string name="btn_login_email">I already have an account</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_done">Got it</string>
    <string name="btn_checkin">Park here</string>
    <string name="btn_checkout">Leave spot</string>
    <string name="btn_info">Info</string>
    <string name="btn_try_again">Retry</string>
    <string name="btn_forgot_password">***Forgot password?</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_available_cities">Available cities</string>
    <string name="btn_select_duration">Select duration</string>
    <string name="btn_zoom_out">Zoom out</string>
    <string name="btn_view_nearest">View nearest</string>
    <string name="dialog_durations_title">Select duration</string>
    <string name="dialog_cities_title">Select city</string>
    <string name="snackbar_map_zoom_needed">Please Zoom in to street level.</string>
    <string name="snackbar_location_permission_needed">Location permission is needed for map accuracy.</string>
    <string name="snackbar_auth_error_facebook">Facebook error: %s</string>
    <string name="snackbar_auth_error_google">Google error: %s</string>
    <string name="snackbar_api_error_code">Server error: code %d</string>
    <string name="snackbar_api_error_message">Server error: %1$s [%2$d]</string>
    <string name="snackbar_host_unknown_error_message">Server connection error [%1$d]</string>
    <string name="snackbar_login_fail">Wrong email or password. Please check the values provided.</string>
    <string name="snackbar_sign_up_fail">User already exists. Login or forgot password?</string>
    <string name="snackbar_unsupported_area">Sorry, we don’t currently know about parking regulations here.</string>
    <string name="snackbar_unsupported_my_location">Sorry, you are located in an unsupported area.</string>
    <string name="snackbar_on_street_zoom_out">Uh oh! You can’t park here at this time.</string>
    <string name="snackbar_on_street_duration_empty_result">Uh oh! You can’t park here for %d hours.</string>
    <string name="snackbar_off_street_zoom_out">Uh oh! No parking lots available here.</string>
    <string name="snackbar_off_street_empty_result">@string/snackbar_off_street_zoom_out</string>
    <string name="snackbar_carshare_vehicles_street_zoom_out">***Uh oh! No cars available here.</string>
    <string name="snackbar_carshare_vehicules_street_empty_result">@string/snackbar_carshare_vehicles_street_zoom_out</string>
    <string name="snackbar_carshare_spots_street_zoom_out">***Uh oh! You can’t park here at this time.</string>
    <string name="snackbar_carshare_spots_street_empty_result">@string/snackbar_carshare_spots_street_zoom_out</string>
    <string name="snackbar_connection_error">Oops, make sure your internet connection is active and try again.</string>
    <string name="toast_checkout_ok">prkng: Checked out successfully</string>
    <string name="toast_checkout_error">prkng: Checkout error</string>
    <string name="map_tab_on_street">On-Street</string>
    <string name="map_tab_off_street">Parking lots</string>
    <string name="map_tab_carshare_vehicles">Cars</string>
    <string name="map_tab_carshare_spots">Park now</string>
    <string name="hour_minutes_format">kk:mm</string>
    <string name="all_day">24&#160;Hrs</string>
    <string name="time_start_end">%1$s – %2$s</string>
    <string name="quantity_half">½</string>
    <plurals name="duration_legend_hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="expiry_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="expiry_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="allowed_all_week">Available all week long</string>
    <string name="open_all_week">24 hour</string>
    <string name="not_allowed">Parking not allowed</string>
    <string name="expiry_day_tomorrow">Tomorrow</string>
    <string name="expiry_hours_minutes">%1$dh %2$dm</string>
    <string name="expiry_day_time_of_day">%1$s %2$s</string>
    <string name="duration_prefix_available">Allowed</string>
    <string name="duration_prefix_paid">Paid</string>
    <string name="duration_prefix_open">Open</string>
    <string name="duration_prefix_closed">Closed</string>
    <string name="duration_prefix_for">For&#160;</string>
    <string name="duration_prefix_until">Until&#160;</string>
    <string name="duration_prefix_paid_for">Metered for</string>
    <string name="duration_prefix_paid_until">Metered until</string>
    <string name="allowed_all_week_prefixed">At all times</string>
    <string name="all_day_closed">Closed</string>
    <string name="lot_attr_indoor">INDOOR</string>
    <string name="lot_attr_outdoor">OUTDOOR</string>
    <string name="lot_attr_card">CREDIT CARD</string>
    <string name="lot_attr_accessible">ACCESSIBLE</string>
    <string name="lot_attr_valet">VALET</string>
    <string name="lot_hourly_price">%s/Hour</string>
    <string name="lot_daily_price_prefix">Daily</string>
    <string name="lot_hourly_price_prefix">Hourly</string>
    <string name="lot_capactiy">Capacity: %d&#160;spaces</string>
    <string name="checkin_title">YOU ARE PARKED ON</string>
    <string name="checkin_expiry">AVAILABLE UNTIL</string>
    <string name="checkin_prefix">Parked on %s</string>
    <string name="checkin_smart_reminder">GET NOTIFIED THE NIGHT BEFORE</string>
    <string name="checkin_empty">Select a segment on the map and tap Check-in to save it here and get reminders</string>
    <string name="checkin_expired">Time is up!</string>
    <string name="auth_subtitle">LOGIN WITH</string>
    <string name="auth_btn_facebook">FACEBOOK</string>
    <string name="auth_btn_google">GOOGLE</string>
    <string name="auth_btn_email">OR USE YOUR EMAIL</string>
    <string name="auth_hint_login_name">Name</string>
    <string name="auth_hint_login_email">Email</string>
    <string name="auth_hint_login_password">Password</string>
    <string name="auth_confirm_password_reset">Please check your email!\r\nYou&#160;will receive instructions on how to enter your new password…</string>
    <string name="search_hint">Search</string>
    <string name="search_credits">Powered by Foursquare &amp;&#160;Mapbox</string>
    <string name="notify_checkin_text">Parked on %s</string>
    <string name="notify_expiry_smart_reminder_text">Parking expires tomorrow</string>
    <string name="notify_expiry_reminder_text">Hey smart driver, time to move your car!</string>
    <string name="auth_error_invalid_email">Use a valid email address</string>
    <string name="auth_error_invalid_password_short">Use at least 6 characters</string>
    <string name="auth_error_invalid_name_short">Use at least 2 characters</string>
    <string name="currency_decimals">$%.2f</string>
    <string name="currency_round">$%d</string>
    <string name="carshare_company_car2go">Car2Go</string>
    <string name="carshare_company_automobile">Auto-mobile</string>
    <string name="carshare_company_communauto">Communauto</string>
    <string name="carshare_company_zipcar">Zipcar</string>
    <string name="carshare_vehicle_fuel_percentage">%d%%</string>
    <string name="carshare_vehicle_name_partner_id">%1$s, #%2$s</string>
    <string name="tutorial_desc_splash">No more parking fines, no&#160;more headaches.</string>
    <string name="tutorial_desc_01">Sarah is having lunch with her mom. She’ll need to park when she gets there. See how she uses prkng!</string>
    <string name="tutorial_desc_02">Once arrived at her destination, the “map” feature shows her the spots where she’s allowed to park.</string>
    <string name="tutorial_desc_03">Sarah’s a bright woman: She taps “parked” so she’ll be notified to move her car before towing does.</string>
    <string name="tutorial_desc_04">No more headaches, no&#160;more surprise tickets: join Sarah in using prkng to find your next free&#160;spot!</string>
    <string name="rate_dialog_title">Happy user?</string>
    <string name="rate_dialog_message">Rate prkng! An app review helps grow our community and adds insight on regulations and parking conditions in your city. Thanks for your support!</string>
</resources>