<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!--<item-->
    <!--android:id="@+id/action_search"-->
    <!--android:icon="@drawable/ic_action_search"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_search"-->
    <!--android:titleCondensed="@string/action_search"-->
    <!--app:showAsAction="always" />-->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:titleCondensed="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/ic_action_timer_default"
        android:orderInCategory="110"
        android:title="@string/action_timer"
        android:titleCondensed="@string/action_timer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_user_activity"
        android:icon="@drawable/ic_action_user_activity_none"
        android:orderInCategory="120"
        android:title="@string/action_user_account"
        android:titleCondensed="@string/action_user_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="130"
        android:title="@string/action_settings"
        android:titleCondensed="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="140"
        android:title="@string/action_about"
        android:titleCondensed="@string/action_about"
        app:showAsAction="never" />
</menu>
