<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/agenda_item_background"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:weightSum="4">

    <ng.prk.prkngandroid.ui.view.IntroBoldTextView
        android:id="@+id/attr_indoor"
        style="@style/LotAttrsText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_lot_attrs_indoor"
        android:text="@string/lot_attr_indoor" />

    <ng.prk.prkngandroid.ui.view.IntroBoldTextView
        android:id="@+id/attr_card"
        style="@style/LotAttrsText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_lot_attrs_card"
        android:gravity="center"
        android:text="@string/lot_attr_card" />

    <ng.prk.prkngandroid.ui.view.IntroBoldTextView
        android:id="@+id/attr_accessible"
        style="@style/LotAttrsText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_lot_attrs_access"
        android:text="@string/lot_attr_accessible" />

    <ng.prk.prkngandroid.ui.view.IntroBoldTextView
        android:id="@+id/attr_valet"
        style="@style/LotAttrsText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_lot_attrs_valet"
        android:text="@string/lot_attr_valet" />
</LinearLayout>