<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/city_tile_dark" />

    <ng.prk.prkngandroid.ui.view.IntroRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_facebook"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/auth_subtitle"
        android:textColor="@color/color_text"
        android:textSize="16sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_google"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="16dp"
        android:background="@color/facebook_blue"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        app:com_facebook_login_text="@string/auth_btn_facebook" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_email"
        android:layout_margin="16dp" />

    <ng.prk.prkngandroid.ui.view.IntroRegularButton
        android:id="@+id/btn_email"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/auth_btn_email" />

</RelativeLayout>
